# tank-agent-ai

./: .agent_pids.txt  .gitignore  pyproject.toml  tmp_debug_agent.py
.github/plans/: plan-fuzzyTurretController.plan.md
02_FRAKCJA_SILNIKA/: engine_v1_beta.py
03_FRAKCJA_AGENTOW/: AGENT_TACTICS.md  ARCHITECTURE.md  DOKUMENTACJA_AGENTOW.md  INSTRUKCJA_IMPLEMENTACJI_AGENTA.md  agent.py  final_agent.py  fuzzy_controller.py  intelligent_agent.py  requirements.txt  run_sparring.py  simple_driver_agent.py  test_modules.py
03_FRAKCJA_AGENTOW/DRIVE/: __init__.py  barrel_controller.py  decision_maker.py  fuzzy_controller.py
03_FRAKCJA_AGENTOW/agent_core/: __init__.py  agent.py  checkpoints.py  driver.py  fuzzy_turret.py  geometry.py  goal_selector.py  planner.py  turret.py  world_model.py
03_FRAKCJA_AGENTOW/agent_logic/: __init__.py  fsm.py  heat_map.py  pathfinder.py  tsk_combat.py  tsk_drive.py  utils.py
03_FRAKCJA_AGENTOW/config/: tsk_c_params.json  tsk_d_params.json
03_FRAKCJA_AGENTOW/scripts/: debug_checkpoints_map.py
03_FRAKCJA_AGENTOW/tests/: run_agent_hard_tests.py  run_agent_tests.py  test_agent_ally_collision_avoidance.py  test_agent_ammo_single_policy.py  test_agent_combat_behavior.py  test_agent_deadlock_unblock.py  test_agent_enemy_intercept_priority.py  test_agent_explore_no_fire.py  test_agent_hazard_escape.py  test_agent_map_trap_scenarios.py  test_agent_no_idle.py  test_agent_pothole_passable.py  test_agent_powerup_detour_budget.py  test_agent_real_map_hard.py  test_agent_real_map_survival.py  (+5 more)
logs/: summary_20260211_163254.txt
(+9 files in other folders)
